--- a/Netflix.html
+++ b/Netflix.html
@@ -1,4 +1,5 @@
-html
+
+<html>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -24,7 +25,7 @@ html
         <section class="hero">
             <h1>Unlimited movies, TV shows, and more.</h1>
             <p>Watch anywhere. Cancel anytime.</p>
-            <button>Watch Free for 1 month</button>
+            <button>Watch Free for 30 Days</button>
         </section>
 
         <section class="content">
@@ -37,81 +38,3 @@ html
     </footer>
 </body>
 </html>
-
-
-And here's the CSS (styles.css) to go with it:
-
-css
-/* Resetting default browser styles */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    font-family: Arial, sans-serif;
-    background-color: #111;
-    color: #fff;
-}
-
-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px;
-    background-color: #000;
-}
-
-.logo {
-    font-size: 2em;
-    font-weight: bold;
-}
-
-nav ul {
-    list-style-type: none;
-}
-
-nav ul li {
-    display: inline;
-    margin-right: 20px;
-}
-
-nav ul li a {
-    text-decoration: none;
-    color: #fff;
-}
-
-main {
-    padding: 20px;
-}
-
-.hero {
-    text-align: center;
-    padding: 100px 0;
-}
-
-.hero h1 {
-    font-size: 3em;
-    margin-bottom: 20px;
-}
-
-.hero p {
-    font-size: 1.5em;
-    margin-bottom: 30px;
-}
-
-button {
-    padding: 10px 20px;
-    font-size: 1.2em;
-    background-color: #e50914;
-    color: #fff;
-    border: none;
-    cursor: pointer;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-}
-
-button:hover {
-    background-color: #ff0a16;
-}
