--- a/Profile.html
+++ b/Profile.html
@@ -1,17 +1,15 @@
-Sure! Below is a simple example of a portfolio website using HTML and CSS:
-
-html
+<html>
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles1.css">
 </head>
 <body>
     <header>
-        <h1>santhosh</h1>
+        <h1>Santhosh</h1>
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
@@ -58,60 +56,3 @@ html
     </footer>
 </body>
 </html>
-
-
-And here is the corresponding CSS file (styles.css):
-
-css
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-}
-
-header {
-    background-color: #333;
-    color: #fff;
-    padding: 20px;
-    text-align: center;
-}
-
-nav ul {
-    list-style-type: none;
-}
-
-nav ul li {
-    display: inline;
-    margin-right: 20px;
-}
-
-nav ul li a {
-    color: #fff;
-    text-decoration: none;
-}
-
-section {
-    padding: 40px;
-}
-
-h2 {
-    color: #333;
-}
-
-.project {
-    margin-bottom: 40px;
-}
-
-.project img {
-    max-width: 100%;
-}
-
-footer {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 20px;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-}
